--- a/mNet/Login.storyboard
+++ b/mNet/Login.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES" initialViewController="OM2-0e-Tyo">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="OM2-0e-Tyo">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -27,10 +28,6 @@
         <scene sceneID="1S2-Hg-pxG">
             <objects>
                 <viewController id="OM2-0e-Tyo" customClass="LoginViewController" customModule="mNet" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="67L-p5-Lzf"/>
-                        <viewControllerLayoutGuide type="bottom" id="tFQ-hh-1ux"/>
-                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Z5M-RV-jZv">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -219,11 +216,12 @@ Analyse your own data with customized reports. Correlate parameters to reach con
                         </subviews>
                         <color key="backgroundColor" red="0.84705882352941175" green="0.84705882352941175" blue="0.84705882352941175" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="ZpG-Y4-Epn" secondAttribute="trailing" id="8SK-t7-eNb"/>
-                            <constraint firstItem="ZpG-Y4-Epn" firstAttribute="top" secondItem="67L-p5-Lzf" secondAttribute="bottom" id="IDa-n8-Mqj"/>
-                            <constraint firstItem="ZpG-Y4-Epn" firstAttribute="leading" secondItem="Z5M-RV-jZv" secondAttribute="leading" id="iur-9m-kMB"/>
-                            <constraint firstItem="tFQ-hh-1ux" firstAttribute="top" secondItem="ZpG-Y4-Epn" secondAttribute="bottom" id="mvA-cC-be5"/>
+                            <constraint firstItem="6wI-St-DGY" firstAttribute="trailing" secondItem="ZpG-Y4-Epn" secondAttribute="trailing" id="8SK-t7-eNb"/>
+                            <constraint firstItem="ZpG-Y4-Epn" firstAttribute="top" secondItem="6wI-St-DGY" secondAttribute="top" id="IDa-n8-Mqj"/>
+                            <constraint firstItem="ZpG-Y4-Epn" firstAttribute="leading" secondItem="6wI-St-DGY" secondAttribute="leading" id="iur-9m-kMB"/>
+                            <constraint firstItem="6wI-St-DGY" firstAttribute="bottom" secondItem="ZpG-Y4-Epn" secondAttribute="bottom" id="mvA-cC-be5"/>
                         </constraints>
+                        <viewLayoutGuide key="safeArea" id="6wI-St-DGY"/>
                     </view>
                     <connections>
                         <outlet property="captchaView" destination="K5R-aY-fbv" id="pI2-Pi-kP2"/>
